--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@
  * 1. Change the default font family in all browsers (opinionated).
  * 2. Prevent adjustments of font size after orientation changes in IE and iOS.
  */
+@import url(https://fonts.googleapis.com/css?family=Fira+Sans:400,400italic);
 html {
   font-family: sans-serif;
   /* 1 */
@@ -443,7 +444,6 @@ body {
   background: #F6F6F8;
   font-size: 20px;
   line-height: 1.6;
-  font-family: 'Open Sans' sans-serif;
   color: #2E2D33;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
@@ -458,16 +458,24 @@ body {
     left: 0;
     bottom: 30px;
     width: 135px;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-direction: column;
-        flex-direction: column;
-    -ms-flex-pack: justify;
-        justify-content: space-between; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
   .home-container header .logo {
     overflow: hidden;
     text-indent: 101%;
     white-space: nowrap;
+    max-width: 135px;
     background-image: url(/assets/img/logo-c.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -488,8 +496,102 @@ body {
     display: block;
     text-align: right;
     padding-right: 20px; }
+  .home-container header .mobile-nav-toggle {
+    display: none;
+    width: 40px;
+    height: 40px;
+    margin-right: 20px;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    cursor: pointer; }
+    .home-container header .mobile-nav-toggle span,
+    .home-container header .mobile-nav-toggle span:before,
+    .home-container header .mobile-nav-toggle span::after {
+      content: "";
+      display: block;
+      height: 2px;
+      width: 100%;
+      background: #333;
+      position: relative;
+      -webkit-transition: all 0.3s ease-in-out;
+              transition: all 0.3s ease-in-out; }
+    .home-container header .mobile-nav-toggle span:before {
+      top: 15px; }
+    .home-container header .mobile-nav-toggle span::after {
+      top: -17px; }
+    .home-container header .mobile-nav-toggle.is-open span {
+      background: transparent; }
+    .home-container header .mobile-nav-toggle.is-open span:before,
+    .home-container header .mobile-nav-toggle.is-open span::after {
+      -webkit-transform-origin: center;
+              transform-origin: center;
+      -webkit-transform: rotate(45deg);
+              transform: rotate(45deg);
+      top: 0; }
+    .home-container header .mobile-nav-toggle.is-open span::after {
+      -webkit-transform: rotate(-45deg);
+              transform: rotate(-45deg); }
+
+.home-container .mobile-nav {
+  display: none;
+  position: absolute;
+  width: 100%;
+  background: white;
+  padding: 30px 0 20px;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out; }
+  .home-container .mobile-nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0; }
+  .home-container .mobile-nav li {
+    text-align: center;
+    margin-bottom: 10px; }
+
+@media (max-width: 775px) {
+  .home-container header {
+    width: auto;
+    padding: 20px 0; }
+    .home-container header .header-position {
+      width: auto;
+      position: relative;
+      top: auto;
+      bottom: auto;
+      left: auto;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center; }
+    .home-container header .site-nav,
+    .home-container header .email-link {
+      display: none; }
+    .home-container header .logo {
+      height: 50px; }
+    .home-container header .mobile-nav-toggle {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex; }
+  .home-container .mobile-nav.is-open {
+    display: block;
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%); } }
 
 .home-container {
+  display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   min-height: 100vh; }
+  @media (max-width: 775px) {
+    .home-container {
+      display: block; } }
