Build column grid layout

--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -1,6 +1,6 @@
 $primary-color: #F6C
-$text-color: #2E2D33
-$accent-color: #BD5248
-$bg-color: #F6F6F8
+$text-color: #000036
+$accent-color: #FF0040
+$bg-color: #FFFFE0
 $link-color: $accent-color
 $selection-color: #FFF498
