--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -366,7 +366,7 @@ textarea {
   /* 2 */ }
 
 .gigantic, .huge, .large, .bigger, .big, h1, h2, h3, h4, h5, h6 {
-  color: #BD5248;
+  color: #FF0040;
   font-weight: bold; }
 
 .gigantic {
@@ -412,12 +412,12 @@ hr {
   height: 0; }
 
 a {
-  color: #BD5248;
+  color: #FF0040;
   text-decoration: underline;
   outline: 0; }
 
 a:hover, a:focus {
-  color: #d89993; }
+  color: #ff668c; }
 
 ::-moz-selection {
   background: #FFF498; }
@@ -441,10 +441,10 @@ body {
   -webkit-tap-highlight-color: #FFF498; }
 
 body {
-  background: #F6F6F8;
+  background: #FFFFE0;
   font-size: 20px;
   line-height: 1.6;
-  color: #2E2D33;
+  color: #000036;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
 
@@ -595,3 +595,57 @@ body {
   @media (max-width: 775px) {
     .home-container {
       display: block; } }
+
+.home-sections {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+  .home-sections section {
+    padding: 50px 0; }
+  .home-sections .flex {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: rows;
+        -ms-flex-direction: rows;
+            flex-direction: rows; }
+  .home-sections .flex--center {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .home-sections .flex--space-around {
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around; }
+  .home-sections .order-first {
+    -webkit-box-ordinal-group: 0;
+    -webkit-order: -1;
+        -ms-flex-order: -1;
+            order: -1; }
+
+.col-1 {
+  max-width: 300px;
+  margin: 0 10px;
+  background: pink; }
+
+.col-2 {
+  max-width: 620px;
+  margin: 0 10px;
+  background: tomato; }
+
+.col-50 {
+  width: 50%;
+  background: skyblue; }
+
+@media (max-width: 640px) {
+  .home-sections .flex {
+    display: block; }
+  .col-1 {
+    max-width: 100%; }
+  .col-50 {
+    width: auto; } }
