Begin building hero section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -586,6 +586,11 @@ body {
     -webkit-transform: translateY(0%);
             transform: translateY(0%); } }
 
+section.about {
+  background-image: url(../img/about-bg.jpg);
+  background-position: center bottom;
+  background-size: cover; }
+
 .home-container {
   display: -webkit-box;
   display: -webkit-flex;
