--- a/assets/css/3-sections/home-about.sass
+++ b/assets/css/3-sections/home-about.sass
@@ -1,5 +1,5 @@
 section.about
   background:
     image: url(../img/about-bg.jpg)
-    position: center bottom
+    position: center
     size: cover
