--- a/assets/css/4-layouts/home.sass
+++ b/assets/css/4-layouts/home.sass
@@ -29,16 +29,16 @@
 .col-1
   max-width: 300px
   margin: 0 10px
-  background: pink
 
 .col-2
   max-width: 620px
   margin: 0 10px
-  background: tomato
 
 .col-50
   width: 50%
-  background: skyblue
+
+.push-right
+  margin-left: 330px
 
 @media (max-width: 640px)
   .home-sections .flex
@@ -49,3 +49,13 @@
 
   .col-50
     width: auto
+
+  .push-right
+    margin-left: 10px
+
+
+// Typography
+.home-lead
+  font-size: 22px
+  line-height: 1.1
+  color: $text-color
