--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -58,22 +58,18 @@ a:hover, a:focus
 ::selection
   background: $selection-color
 
-::-moz-selection
-  background: $selection-color
-
 img::selection
   background: transparent
 
-img::-moz-selection
-  background: transparent
+// Basic Styles
 
+html,
 body
-  -webkit-tap-highlight-color: $selection-color
+  min-height: 100vh
 
 body
   background: $bg-color
-  font-size: 20px
+  font-size: 18px
   line-height: 1.6
+  font-family: 'Roboto', sans-serif
   color: $text-color
-  -webkit-font-smoothing: antialiased
-  -webkit-text-size-adjust: 100%
