--- a/assets/css/3-sections/home-about.sass
+++ b/assets/css/3-sections/home-about.sass
@@ -1,5 +1,23 @@
 section.about
   background:
     image: url(../img/about-bg.jpg)
-    position: center
+    position: center bottom
     size: cover
+
+  h2
+    color: $text-color
+    font:
+      size: 40px
+      weight: 400
+    line-height: 1
+    margin-left: -88px
+    margin-top: 0
+
+  .home-lead
+    padding-bottom: 80px
+
+@media (max-width: 640px)
+  section.about
+    h2
+      margin-left: auto
+      margin-right: auto
