--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,400italic);
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
  * 2. Prevent adjustments of font size after orientation changes in IE and iOS.
  */
-@import url(https://fonts.googleapis.com/css?family=Fira+Sans:400,400italic);
 html {
   font-family: sans-serif;
   /* 1 */
@@ -425,28 +425,22 @@ a:hover, a:focus {
 ::selection {
   background: #FFF498; }
 
-::-moz-selection {
-  background: #FFF498; }
-
 img::-moz-selection {
   background: transparent; }
 
 img::selection {
   background: transparent; }
 
-img::-moz-selection {
-  background: transparent; }
-
+html,
 body {
-  -webkit-tap-highlight-color: #FFF498; }
+  min-height: 100vh; }
 
 body {
   background: #FFFFE0;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.6;
-  color: #000036;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: 100%; }
+  font-family: 'Roboto', sans-serif;
+  color: #000036; }
 
 .home-container header {
   width: 135px;
@@ -588,8 +582,22 @@ body {
 
 section.about {
   background-image: url(../img/about-bg.jpg);
-  background-position: center;
+  background-position: center bottom;
   background-size: cover; }
+  section.about h2 {
+    color: #000036;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 1;
+    margin-left: -88px;
+    margin-top: 0; }
+  section.about .home-lead {
+    padding-bottom: 80px; }
+
+@media (max-width: 640px) {
+  section.about h2 {
+    margin-left: auto;
+    margin-right: auto; } }
 
 .home-container {
   display: -webkit-box;
@@ -635,17 +643,17 @@ section.about {
 
 .col-1 {
   max-width: 300px;
-  margin: 0 10px;
-  background: pink; }
+  margin: 0 10px; }
 
 .col-2 {
   max-width: 620px;
-  margin: 0 10px;
-  background: tomato; }
+  margin: 0 10px; }
 
 .col-50 {
-  width: 50%;
-  background: skyblue; }
+  width: 50%; }
+
+.push-right {
+  margin-left: 330px; }
 
 @media (max-width: 640px) {
   .home-sections .flex {
@@ -653,4 +661,11 @@ section.about {
   .col-1 {
     max-width: 100%; }
   .col-50 {
-    width: auto; } }
+    width: auto; }
+  .push-right {
+    margin-left: 10px; } }
+
+.home-lead {
+  font-size: 22px;
+  line-height: 1.1;
+  color: #000036; }
