Build Writing Section

--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -1,6 +1,6 @@
-$primary-color: #F6C
-$text-color: #000036
+$primary-color: #A31621
+$text-color: #033648
 $accent-color: #FF0040
-$bg-color: #FFFFE0
+$bg-color: #DBE2E6
 $link-color: $accent-color
-$selection-color: #FFF498
+$selection-color: #1F7A8C
