--- a/assets/css/3-sections/header.sass
+++ b/assets/css/3-sections/header.sass
@@ -1,7 +1,7 @@
 .home-container
   header
     width: 135px
-    background: white
+    background: $bg-color
     padding: 30px 0
 
     .header-position
@@ -48,9 +48,7 @@
       display: none
       width: 40px
       height: 40px
-      //background: pink
       margin-right: 20px
-      //display: flex
       align-items: center
       cursor: pointer
 
@@ -90,7 +88,7 @@
     display: none
     position: absolute
     width: 100%
-    background: white
+    background: $bg-color
     padding: 30px 0 20px
     transform: translateY(-100%)
     transition: all 0.3s ease-in-out
@@ -125,6 +123,7 @@
 
       .logo
         height: 50px
+        margin-left: -25px
 
       .mobile-nav-toggle
         display: flex
