--- a/assets/css/4-layouts/home.sass
+++ b/assets/css/4-layouts/home.sass
@@ -14,7 +14,7 @@
   // Flex classes
   .flex
     display: flex
-    flex-direction: rows
+    flex-direction: row
 
   .flex--center
     justify-content: center
@@ -59,3 +59,9 @@
   font-size: 22px
   line-height: 1.1
   color: $text-color
+
+  &.outdented
+    text-indent: -0.8em
+
+    @media (max-width: 640px)
+      text-indent: 0
