--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -420,10 +420,10 @@ a:hover, a:focus {
   color: #ff668c; }
 
 ::-moz-selection {
-  background: #FFF498; }
+  background: #1F7A8C; }
 
 ::selection {
-  background: #FFF498; }
+  background: #1F7A8C; }
 
 img::-moz-selection {
   background: transparent; }
@@ -433,18 +433,32 @@ img::selection {
 
 html,
 body {
-  min-height: 100vh; }
+  min-height: 100vh;
+    min-height-box-sizing: border-box; }
 
 body {
-  background: #FFFFE0;
+  background: #DBE2E6;
   font-size: 18px;
   line-height: 1.6;
   font-family: 'Roboto', sans-serif;
-  color: #000036; }
+  color: #033648; }
+
+.home-cta {
+  font-size: 28px;
+  display: block;
+  background: white;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 0.4em 0;
+  line-height: 1.25;
+  -webkit-transition: all 0.15s ease-in-out;
+          transition: all 0.15s ease-in-out; }
+  .home-cta:hover {
+    box-shadow: 0 5px 14px rgba(0, 0, 0, 0.4); }
 
 .home-container header {
   width: 135px;
-  background: white;
+  background: #DBE2E6;
   padding: 30px 0; }
   .home-container header .header-position {
     position: fixed;
@@ -532,7 +546,7 @@ body {
   display: none;
   position: absolute;
   width: 100%;
-  background: white;
+  background: #DBE2E6;
   padding: 30px 0 20px;
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
@@ -569,7 +583,8 @@ body {
     .home-container header .email-link {
       display: none; }
     .home-container header .logo {
-      height: 50px; }
+      height: 50px;
+      margin-left: -25px; }
     .home-container header .mobile-nav-toggle {
       display: -webkit-box;
       display: -webkit-flex;
@@ -585,7 +600,7 @@ section.about {
   background-position: center bottom;
   background-size: cover; }
   section.about h2 {
-    color: #000036;
+    color: #033648;
     font-size: 40px;
     font-weight: 400;
     line-height: 1;
@@ -598,6 +613,56 @@ section.about {
   section.about h2 {
     margin-left: auto;
     margin-right: auto; } }
+
+section.writing {
+  background: #02B875;
+  color: white; }
+  section.writing .home-cta {
+    color: #02B875; }
+  section.writing .writing-strip {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-align-content: space-around;
+        -ms-flex-line-pack: distribute;
+            align-content: space-around;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    section.writing .writing-strip .row {
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap; }
+    section.writing .writing-strip .col {
+      background: salmon;
+      height: 100px;
+      margin: 12px;
+      width: 100px;
+      border-radius: 50%;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+      -webkit-transition: all 0.15s ease-in-out;
+              transition: all 0.15s ease-in-out; }
+      section.writing .writing-strip .col:hover {
+        box-shadow: 0 5px 14px rgba(0, 0, 0, 0.4); }
+
+@media (max-width: 640px) {
+  section.writing .writing-strip {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-top: 20px; } }
 
 .home-container {
   display: -webkit-box;
@@ -623,9 +688,9 @@ section.about {
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: rows;
-        -ms-flex-direction: rows;
-            flex-direction: rows; }
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row; }
   .home-sections .flex--center {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
@@ -668,4 +733,9 @@ section.about {
 .home-lead {
   font-size: 22px;
   line-height: 1.1;
-  color: #000036; }
+  color: #033648; }
+  .home-lead.outdented {
+    text-indent: -0.8em; }
+    @media (max-width: 640px) {
+      .home-lead.outdented {
+        text-indent: 0; } }
