--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,8 +5,10 @@
 @import "1-base/vars";
 @import "1-base/base";
 
+@import "2-modules/buttons";
+
 @import "3-sections/header";
 @import "3-sections/home-about";
-
+@import "3-sections/home-writing";
 
 @import "4-layouts/home";
