Reorganize writing section flex-grid

--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -4,3 +4,7 @@ $accent-color: #FF0040
 $bg-color: #DBE2E6
 $link-color: $accent-color
 $selection-color: #1F7A8C
+
+$c-bottom: #036564
+$c-side: #033649
+$c-top: #CDB380
