--- a/_pugfiles/sections-writing.pug
+++ b/_pugfiles/sections-writing.pug
@@ -5,14 +5,12 @@ section.writing
         p.home-lead.outdented ...here are some things that Rich has written...
         a(href="https://medium.com/@rich.cordero").home-cta Read more on Medium
 
-    .col-50.writing-strip
-      .row.row-a.flex
-        .col
-        .col
-        .col
-        .col
-
-        .col
-        .col
-        .col
-        .col
+    .col-50.flex.writing-strip
+        .col 1
+        .col 2
+        .col 3
+        .col 4
+        .col 5
+        .col 6
+        .col 7
+        .col 8
