--- a/assets/css/3-sections/home-writing.sass
+++ b/assets/css/3-sections/home-writing.sass
@@ -7,18 +7,11 @@ section.writing
 
   .writing-strip
     display: flex
-    flex-direction: column
-    align-content: space-around
-    justify-content: space-around
-    align-items: center
-
-    .row
-      flex-wrap: wrap
-
+    flex-wrap: wrap
     .col
       background: salmon
       height: 100px
-      margin: 12px
+      margin: 12px 12px
       width: 100px
       border-radius: 50%
       box-shadow: 0 3px 10px rgba(0,0,0,0.2)
@@ -26,9 +19,19 @@ section.writing
 
       &:hover
         box-shadow: 0 5px 14px rgba(0,0,0,0.4)
+        cursor: pointer
+  .col-1
+    position: relative
+    height: 400px
+    display: flex
+    flex-direction: column
+    justify-content: center
+    p
+      margin-top: -20px
 
-@media (max-width: 640px)
+@media (max-width: 895px)
   section.writing
     .writing-strip
-      flex-direction: row
-      margin-top: 20px
+      .col
+        height: 75px
+        width: 75px
