--- a/_pugfiles/sections-projects.pug
+++ b/_pugfiles/sections-projects.pug
@@ -1,8 +1,7 @@
 section.projects
   .flex.flex--center
-    .col-1.order-first
-      .project-strip
-        
     .col-1
-      p.home-lead.outdented ...and here are some things he's made...
-      a(href="http://codepen.io/corderophilosophy").home-cta See more at Codepen.io
+      p.home-lead.outdented ...and writing about his learning experiences, philosophy, sports...
+
+    .col-1
+      a(href="").home-cta Visit Blog
