--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,8 +4,8 @@
 
 @import "1-base/vars";
 @import "1-base/base";
+@import "1-base/buttons";
 
-@import "2-modules/buttons";
 
 @import "3-sections/header";
 @import "3-sections/home-about";
