--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,5 +11,7 @@
 @import "3-sections/home-about";
 @import "3-sections/home-writing";
 @import "3-sections/home-projects";
+@import "3-sections/home-contact";
+
 
 @import "4-layouts/home";
