Remove redundancy. Build blog framework.

--- a/_pugfiles/sections-about.pug
+++ b/_pugfiles/sections-about.pug
@@ -1,5 +1,8 @@
 section.about
   .flex.flex--center
-    .col-1.push-right
-      h2 Rich is learning Web and JavaScript development,
-      p.home-lead and he'd love to chat with you about it...
+    .col-50.flex.flex--center
+      .col-1
+        h2 Rich is learning Web and JavaScript development,
+        p.home-lead and he'd love to chat with you about it...
+    .col-50
+      .hero
