--- a/_pugfiles/sections-projects.pug
+++ b/_pugfiles/sections-projects.pug
@@ -1,7 +1,16 @@
 section.projects
   .flex.flex--center
-    .col-1
-      p.home-lead.outdented ...and writing about his learning experiences, philosophy, sports...
+    .col-50.flex.flex--center
+      .col-1
+        p.home-lead.outdented ...here are some things that Rich has made...
+        a(href="https://github.com/corderophilosophy").home-cta Visit GitHub
 
-    .col-1
-      a(href="").home-cta Visit Blog
+    .col-50.flex.projects-strip
+        .col 1
+        .col 2
+        .col 3
+        .col 4
+        .col 5
+        .col 6
+        .col 7
+        .col 8
