--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -1,7 +1,7 @@
 $primary-color: #A31621
 $text-color: #033648
 $accent-color: #FF0040
-$bg-color: #DBE2E6
+$bg-color: white
 $link-color: $accent-color
 $selection-color: #1F7A8C
 
@@ -9,6 +9,6 @@ $c-bottom: #036564
 $c-side: #033649
 $c-top: #CDB380
 
-$writing-bg: #02B875
-$projects-bg: #29333F
-$contact-bg: #3323a0 
+$projects-bg: $c-bottom
+$blog-bg: $c-side
+$contact-bg: $c-top
