--- a/_includes/sections-about.html
+++ b/_includes/sections-about.html
@@ -1,1 +1,1 @@
-<section class="about"><div class="flex flex--center"><div class="col-1 push-right"><h2>Rich is learning Web and JavaScript development,</h2><p class="home-lead">and he'd love to chat with you about it...</p></div></div></section>
+<section class="about"><div class="flex flex--center"><div class="col-50 flex flex--center"><div class="col-1"><h2>Rich is learning Web and JavaScript development,</h2><p class="home-lead">and he'd love to chat with you about it...</p></div></div><div class="col-50"><div class="hero"></div></div></div></section>
