--- a/assets/css/3-sections/_home-projects.sass
+++ b/assets/css/3-sections/_home-projects.sass
@@ -2,28 +2,42 @@ section.projects
   background: $projects-bg
   color: white
 
-  .home-lead
-    color: white
   .home-cta
     color: $projects-bg
-    width: 300px
-    background: white
 
-  // .col-1.order-first
-  //   margin-right: 100px
-  //
-  // .home-cta
-  //   font-size: 24px
-  //
-  // .project-strip
-  //   background: orange
-  //   position: absolute
-  //   display: inline-block
-  //   top: 0
-  //   margin: -50px 0
-  //   width: 100%
-  //   height: calc(100% + 100px)
-  //
-  // .col-1
-  //   position: relative
-  //
+  .projects-strip
+    display: flex
+    flex-wrap: wrap
+    align-content: center
+    .col
+      background: salmon
+      height: 100px
+      margin: 12px 12px
+      width: 100px
+      border-radius: 50%
+      box-shadow: 0 3px 10px rgba(0,0,0,0.2)
+      transition: all 0.15s ease-in-out
+
+      &:hover
+        box-shadow: 0 5px 14px rgba(0,0,0,0.4)
+        cursor: pointer
+  .col-1
+    position: relative
+    height: 300px
+    display: flex
+    flex-direction: column
+    justify-content: center
+    p
+      margin-top: -20px
+      color: white
+
+@media (max-width: 895px)
+  section.projects
+    .home-cta
+      max-width: 300px
+    .col-1
+      height: 200px
+    .projects-strip
+      .col
+        height: 75px
+        width: 75px
