--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -434,10 +434,10 @@ img::selection {
 html,
 body {
   min-height: 100vh;
-    min-height-box-sizing: border-box; }
+  box-sizing: border-box; }
 
 body {
-  background: #DBE2E6;
+  background: white;
   font-size: 18px;
   line-height: 1.6;
   font-family: 'Roboto', sans-serif;
@@ -458,7 +458,7 @@ body {
 
 .home-container header {
   width: 135px;
-  background: #DBE2E6;
+  background: white;
   padding: 30px 0; }
   .home-container header .header-position {
     position: fixed;
@@ -546,7 +546,7 @@ body {
   display: none;
   position: absolute;
   width: 100%;
-  background: #DBE2E6;
+  background: white;
   padding: 30px 0 20px;
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
@@ -596,9 +596,7 @@ body {
             transform: translateY(0%); } }
 
 section.about {
-  background-image: url(../img/about-bg.jpg);
-  background-position: center bottom;
-  background-size: cover; }
+  background: #CDB380; }
   section.about h2 {
     color: #033648;
     font-size: 40px;
@@ -608,18 +606,100 @@ section.about {
     margin-top: 0; }
   section.about .home-lead {
     padding-bottom: 80px; }
+  section.about .hero {
+    background-image: url(/assets/img/me.webp);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 300px;
+    width: 50%;
+    border-radius: 100%; }
 
 @media (max-width: 640px) {
   section.about h2 {
     margin-left: auto;
-    margin-right: auto; } }
+    margin-right: auto; }
+  section.about .hero {
+    display: none; } }
 
-section.writing {
-  background: #02B875;
+section.blog {
+  background: #033649;
   color: white; }
-  section.writing .home-cta {
-    color: #02B875; }
-  section.writing .writing-strip {
+  section.blog .col-1 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  section.blog .home-lead {
+    color: white; }
+  section.blog .home-cta {
+    color: #033649;
+    width: 300px;
+    background: white; }
+  section.blog .post-wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-flex-basis: 90px;
+        -ms-flex-preferred-size: 90px;
+            flex-basis: 90px;
+    margin: -50px 0; }
+  section.blog .post-thumb {
+    display: block;
+    background-size: cover;
+    width: 25%;
+    position: relative;
+    overflow: hidden; }
+    section.blog .post-thumb:after {
+      content: '';
+      display: block;
+      padding-top: 100%; }
+    section.blog .post-thumb .post-meta {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(3, 54, 73, 0.7);
+      color: white;
+      padding: 10px;
+      -webkit-transform: translate(0%, 100%) scale(0.5);
+              transform: translate(0%, 100%) scale(0.5);
+      -webkit-transition: all 200ms ease-in-out;
+              transition: all 200ms ease-in-out;
+      opacity: 0; }
+      section.blog .post-thumb .post-meta .name {
+        font-size: 16px; }
+      section.blog .post-thumb .post-meta .date {
+        font-size: 14px;
+        font-style: italic; }
+  section.blog .post-thumb:hover .post-meta {
+    opacity: 1;
+    -webkit-transform: translate(0%, 0%) scale(1);
+            transform: translate(0%, 0%) scale(1); }
+  @media (max-width: 640px) {
+    section.blog .desc-wrap {
+      margin-top: 100px; } }
+
+section.projects {
+  background: #036564;
+  color: white; }
+  section.projects .home-cta {
+    color: #036564; }
+  section.projects .projects-strip {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -630,7 +710,7 @@ section.writing {
     -webkit-align-content: center;
         -ms-flex-line-pack: center;
             align-content: center; }
-    section.writing .writing-strip .col {
+    section.projects .projects-strip .col {
       background: salmon;
       height: 100px;
       margin: 12px 12px;
@@ -639,12 +719,12 @@ section.writing {
       box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
       -webkit-transition: all 0.15s ease-in-out;
               transition: all 0.15s ease-in-out; }
-      section.writing .writing-strip .col:hover {
+      section.projects .projects-strip .col:hover {
         box-shadow: 0 5px 14px rgba(0, 0, 0, 0.4);
         cursor: pointer; }
-  section.writing .col-1 {
+  section.projects .col-1 {
     position: relative;
-    height: 400px;
+    height: 300px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -658,30 +738,21 @@ section.writing {
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center; }
-    section.writing .col-1 p {
-      margin-top: -20px; }
+    section.projects .col-1 p {
+      margin-top: -20px;
+      color: white; }
 
 @media (max-width: 895px) {
-  section.writing .home-cta {
+  section.projects .home-cta {
     max-width: 300px; }
-  section.writing .col-1 {
+  section.projects .col-1 {
     height: 200px; }
-  section.writing .writing-strip .col {
+  section.projects .projects-strip .col {
     height: 75px;
     width: 75px; } }
 
-section.projects {
-  background: #29333F;
-  color: white; }
-  section.projects .home-lead {
-    color: white; }
-  section.projects .home-cta {
-    color: #29333F;
-    width: 300px;
-    background: white; }
-
 section.contact {
-  background: #3323a0; }
+  background: #CDB380; }
   section.contact .contact-link {
     padding: 100px; }
 
