--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,7 @@
 
 @import "3-sections/header";
 @import "3-sections/home-about";
-@import "3-sections/home-writing";
+@import "3-sections/home-blog";
 @import "3-sections/home-projects";
 @import "3-sections/home-contact";
 
