--- a/_pugfiles/sections-blog.pug
+++ b/_pugfiles/sections-blog.pug
@@ -3,11 +3,11 @@ section.blog
 
     .col-50
       .post-wrap
-      | {% for posts in site.posts %}
-      a(href="" style="background-image: url(assets/img/posts/thumbnails/post-1.jpg)").post-thumb
+      | {% for post in site.posts limit: 12 %}
+      a(href="" style="background-image: url(assets/img/posts/thumbnails/{{post.thumbnail}})").post-thumb
         .post-meta
-          .name Post Name
-          .date July 2, 1983
+          .name {{post.title}}
+          .date {{post.date | date: "%a, %d %b, %Y"}}
       | {% endfor %}
 
     .col-50.flex.flex--center.order-first
