--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,24 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<div class="home-container">
+    {% include header.html %}
 
-<div class="post">
-{{ content }}
+    <div class="bloglayout">
+        <h1>{{ page.title }}</h1>
+        <p class="meta">{{ page.date | date_to_string }}</p>
+
+        <div class="post-content">
+            {{ content }}
+        </div>
+
+        <div id="home">
+            <h1>Blog Posts</h1>
+            <ul class="postlist">
+                {% for post in site.posts %}
+                <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 </div>
