--- a/assets/css/3-sections/_home-about.sass
+++ b/assets/css/3-sections/_home-about.sass
@@ -23,12 +23,14 @@ section.about
     width: 50%
     border-radius: 100%
 
+@media (max-width: 999px)
+  section.about
+    .hero
+      display: none;
 
-@media (max-width: 640px)
+
+@media (max-width: 720px)
   section.about
     h2
       margin-left: auto
       margin-right: auto
-
-    .hero
-      display: none;
