--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -615,12 +615,14 @@ section.about {
     width: 50%;
     border-radius: 100%; }
 
-@media (max-width: 640px) {
-  section.about h2 {
-    margin-left: auto;
-    margin-right: auto; }
+@media (max-width: 999px) {
   section.about .hero {
     display: none; } }
+
+@media (max-width: 720px) {
+  section.about h2 {
+    margin-left: auto;
+    margin-right: auto; } }
 
 section.blog {
   background: #033649;
@@ -682,7 +684,8 @@ section.blog {
               transition: all 200ms ease-in-out;
       opacity: 0; }
       section.blog .post-thumb .post-meta .name {
-        font-size: 16px; }
+        font-size: 16px;
+        line-height: 1.2; }
       section.blog .post-thumb .post-meta .date {
         font-size: 14px;
         font-style: italic; }
@@ -690,9 +693,12 @@ section.blog {
     opacity: 1;
     -webkit-transform: translate(0%, 0%) scale(1);
             transform: translate(0%, 0%) scale(1); }
-  @media (max-width: 640px) {
+  @media (max-width: 720px) {
     section.blog .desc-wrap {
       margin-top: 100px; } }
+  @media (max-width: 999px) and (min-width: 720px) {
+    section.blog .post-thumb {
+      width: 33.3%; } }
 
 section.projects {
   background: #036564;
@@ -831,3 +837,14 @@ section.contact {
     @media (max-width: 640px) {
       .home-lead.outdented {
         text-indent: 0; } }
+
+.bloglayout {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+  @media (max-width: 830px) {
+    .bloglayout {
+      margin-left: 15px; } }
+  .bloglayout h1 {
+    color: blue; }
