Finish styling blog

--- a/_pugfiles/header.pug
+++ b/_pugfiles/header.pug
@@ -1,7 +1,7 @@
 mixin nav-content()
   ul
     li: a(href="#about") About
-    li: a(href="#writing") Writing
+    li: a(href="#blog") Blog
     li: a(href="#projects") Projects
     li: a(href="#contact") Contact
 
@@ -15,6 +15,6 @@ header
     nav.site-nav
       +nav-content()
 
-    a(href="mailto:rich@gmail.com").email-link +email me
+    a(href="mailto:rich@corderophilosophy.com").email-link +email me
 
     .mobile-nav-toggle: span
