--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -1,8 +1,8 @@
 $primary-color: #A31621
 $text-color: #033648
-$accent-color: #FF0040
+$accent-color: #036564
 $bg-color: white
-$link-color: $accent-color
+$link-color: #FF0040
 $selection-color: #1F7A8C
 
 $c-bottom: #036564
