--- a/assets/css/3-sections/_home-contact.sass
+++ b/assets/css/3-sections/_home-contact.sass
@@ -1,5 +1,12 @@
 section.contact
   background: $contact-bg
 
+  .col-2
+    height: 200px
+    align-self: center
+    margin-top: auto
+    display: flex
+
   .contact-link
-    padding: 100px
+    align-self: center
+    text-decoration: none
