--- a/_includes/sections-contact.html
+++ b/_includes/sections-contact.html
@@ -1,1 +1,1 @@
-<section class="contact"><div class="flex flex--center"><div class="col-2"><a class="contact-link" href="mailto:rich@corderophilosophy.com&amp;subject=Hi%20Rich!">Send Rich an e-mail!</a></div></div></section>
+<section class="contact"><div class="flex flex--center"><div class="col-2"><a class="contact-link" href="mailto:rich@corderophilosophy.com&amp;subject=Hi%20Rich!"><h1>e-mail Rich!</h1></a></div></div></section>
