--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,22 +1,24 @@
 ---
 layout: default
 ---
+
 <div class="home-container">
     {% include header.html %}
 
     <div class="bloglayout">
-        <h1>{{ page.title }}</h1>
-        <p class="meta">{{ page.date | date_to_string }}</p>
-
         <div class="post-content">
+            <h1>{{ page.title }}</h1>
+            <p class="meta">{{ page.date | date_to_string }}</p>
+
             {{ content }}
+
         </div>
 
-        <div id="home">
-            <h1>Blog Posts</h1>
+        <div class="sidebar">
+            <h1 class="blog-title">Recent Posts</h1>
             <ul class="postlist">
                 {% for post in site.posts %}
-                <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+                <li> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
                 {% endfor %}
             </ul>
         </div>
