--- a/_pugfiles/sections-contact.pug
+++ b/_pugfiles/sections-contact.pug
@@ -1,4 +1,5 @@
 section.contact
   .flex.flex--center
     .col-2
-      a(href="mailto:rich@corderophilosophy.com&subject=Hi%20Rich!").contact-link Send Rich an e-mail!
+      a(href="mailto:rich@corderophilosophy.com&subject=Hi%20Rich!").contact-link
+        h1 e-mail Rich!
