--- a/_pugfiles/sections-about.pug
+++ b/_pugfiles/sections-about.pug
@@ -1,6 +1,6 @@
-section.about
+section.about#about
   .flex.flex--center
     .col-1
       h2 Rich is learning Web and JavaScript development,
       p.home-lead and he'd love to chat with you about it...
-    .col-1.hero
+    .col-1
