--- a/_pugfiles/sections-projects.pug
+++ b/_pugfiles/sections-projects.pug
@@ -1,4 +1,4 @@
-section.projects
+section.projects#projects
   .flex.flex--center
     .col-50.flex.flex--center
       .col-1
@@ -6,11 +6,6 @@ section.projects
         a(href="https://github.com/corderophilosophy").home-cta Visit GitHub
 
     .col-50.flex.projects-strip
-        .col 1
-        .col 2
-        .col 3
-        .col 4
-        .col 5
-        .col 6
-        .col 7
-        .col 8
+        .col
+        .col
+        .col 
