--- a/assets/css/0-tools/fonts.scss
+++ b/assets/css/0-tools/fonts.scss
@@ -1,1 +1,1 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,400italic);
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,400italic);
