--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,16 @@
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="/assets/css/main.css">
+  <script src="http://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
   {{ content }}
-  
+
+  <script src="/assets/js/functions.js">
+  </script>
+
 </body>
 
 </html>
