--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home-container">
     {% include header.html %}
 
-    <div class="bloglayout">
+    <div class="home-sections bloglayout">
         <div class="post-content">
             <h1>{{ page.title }}</h1>
             <p class="meta">{{ page.date | date_to_string }}</p>
@@ -17,7 +17,7 @@ layout: default
         <div class="sidebar">
             <h1 class="blog-title">Recent Posts</h1>
             <ul class="postlist">
-                {% for post in site.posts %}
+                {% for post in site.posts limit: 10 %}
                 <li> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
                 {% endfor %}
             </ul>
