--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -71,6 +71,6 @@ body
 body
   background: $bg-color
   font-size: 18px
-  line-height: 1.6
-  font-family: 'Roboto', sans-serif
+  line-height: 1.4
+  font-family: 'Titillium Web', sans-serif
   color: $text-color
