--- a/assets/css/3-sections/_home-blog.sass
+++ b/assets/css/3-sections/_home-blog.sass
@@ -2,7 +2,7 @@ section.blog
   background: $blog-bg
   color: white
 
-  .col-1
+  .description
     display: flex
     align-items: center
 
@@ -18,15 +18,31 @@ section.blog
     flex-wrap: wrap
     flex-direction: row
     flex-basis: 90px
-    margin: -50px 0
+    margin-top: -50px
+    margin-bottom: -50px
 
   .post-thumb
     display: block
     background:
       size: cover
+      position: center
     width: 25%
     position: relative
     overflow: hidden
+    opacity: 0
+    transform: translateX(-20px)
+    transition: all 300ms ease-in-out
+
+    &.is-visible
+      opacity: 1
+      transform: translateX(0px)
+
+    &.is-emph
+      animation-name: jello
+      transform-origin: center
+      animation-duration: 1s
+      animation-fill-mode: both
+      z-index: 1
 
     &:after
       content: ''
@@ -46,22 +62,47 @@ section.blog
       transition: all 200ms ease-in-out
       opacity: 0
 
-      .name
-        font-size: 16px
+      .name,
+      .date,
+      .excerpt
+        font-size: .8em
         line-height: 1.2
 
-      .date
-        font-size: 14px
+      .date,
+      .excerpt
         font-style: italic
+
 
   .post-thumb:hover .post-meta
     opacity: 1
     transform: translate(0%, 0%) scale(1)
 
-  @media (max-width: 720px)
+  @media (max-width: 640px)
     .desc-wrap
       margin-top: 100px
+      margin-left: auto
+      margin-right: auto
+
 
   @media (max-width: 999px) and (min-width: 720px)
     .post-thumb
       width: 33.3%
+
+
+@keyframes jello
+  from, 11.1%, to
+    transform: none
+  22.2%
+    transform: skewX(-12.5deg) skewY(-12.5deg)
+  33.3%
+    transform: skewX(6.25deg) skewY(6.25deg)
+  44.4%
+    transform: skewX(-3.125deg) skewY(-3.125deg)
+  55.5%
+    transform: skewX(1.5625deg) skewY(1.5625deg)
+  66.6%
+    transform: skewX(-0.78125deg) skewY(-0.78125deg)
+  77.7%
+    transform: skewX(0.390625deg) skewY(0.390625deg)
+  88.8%
+    transform: skewX(-0.1953125deg) skewY(-0.1953125deg)
