--- a/assets/css/3-sections/_home-projects.sass
+++ b/assets/css/3-sections/_home-projects.sass
@@ -10,17 +10,38 @@ section.projects
     flex-wrap: wrap
     align-content: center
     .col
-      background: salmon
       height: 100px
       margin: 12px 12px
       width: 100px
-      border-radius: 50%
       box-shadow: 0 3px 10px rgba(0,0,0,0.2)
       transition: all 0.15s ease-in-out
+      &:first-child
+        background:
+          image: url(/assets/img/img-quote.png)
+          repeat: no-repeat
+          position: center
+          size: contain
+
+      &:nth-child(2)
+        background:
+          image: url(/assets/img/img-fc04-tribute.png)
+          repeat: no-repeat
+          position: center
+          size: contain
+
+      &:nth-child(3)
+        background:
+          image: url(/assets/img/img-fccprofile.png)
+          repeat: no-repeat
+          position: center
+          size: contain
 
       &:hover
+        transform: scale(1.3)
         box-shadow: 0 5px 14px rgba(0,0,0,0.4)
         cursor: pointer
+
+
   .col-1
     position: relative
     height: 300px
@@ -30,6 +51,13 @@ section.projects
     p
       margin-top: -20px
       color: white
+
+@media (max-width: 640px)
+  .home-lead,
+  .home-cta
+    margin-left: auto
+    margin-right: auto
+
 
 @media (max-width: 895px)
   section.projects
