--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,400italic);
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,400italic);
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
@@ -439,8 +439,8 @@ body {
 body {
   background: white;
   font-size: 18px;
-  line-height: 1.6;
-  font-family: 'Roboto', sans-serif;
+  line-height: 1.4;
+  font-family: 'Titillium Web', sans-serif;
   color: #033648; }
 
 .home-cta {
@@ -452,9 +452,16 @@ body {
   padding: 0.4em 0;
   line-height: 1.25;
   -webkit-transition: all 0.15s ease-in-out;
-          transition: all 0.15s ease-in-out; }
+          transition: all 0.15s ease-in-out;
+  width: 300px; }
   .home-cta:hover {
     box-shadow: 0 5px 14px rgba(0, 0, 0, 0.4); }
+
+@media (max-width: 640px) {
+  .home-lead,
+  .home-cta {
+    margin-left: auto;
+    margin-right: auto; } }
 
 .home-container header {
   width: 135px;
@@ -606,20 +613,8 @@ section.about {
     margin-top: 0; }
   section.about .home-lead {
     padding-bottom: 80px; }
-  section.about .hero {
-    background-image: url(/assets/img/me.webp);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    height: 300px;
-    width: 50%;
-    border-radius: 100%; }
 
-@media (max-width: 999px) {
-  section.about .hero {
-    display: none; } }
-
-@media (max-width: 720px) {
+@media (max-width: 640px) {
   section.about h2 {
     margin-left: auto;
     margin-right: auto; } }
@@ -627,7 +622,7 @@ section.about {
 section.blog {
   background: #033649;
   color: white; }
-  section.blog .col-1 {
+  section.blog .description {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -658,13 +653,34 @@ section.blog {
     -webkit-flex-basis: 90px;
         -ms-flex-preferred-size: 90px;
             flex-basis: 90px;
-    margin: -50px 0; }
+    margin-top: -50px;
+    margin-bottom: -50px; }
   section.blog .post-thumb {
     display: block;
     background-size: cover;
+    background-position: center;
     width: 25%;
     position: relative;
-    overflow: hidden; }
+    overflow: hidden;
+    opacity: 0;
+    -webkit-transform: translateX(-20px);
+            transform: translateX(-20px);
+    -webkit-transition: all 300ms ease-in-out;
+            transition: all 300ms ease-in-out; }
+    section.blog .post-thumb.is-visible {
+      opacity: 1;
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px); }
+    section.blog .post-thumb.is-emph {
+      -webkit-animation-name: jello;
+              animation-name: jello;
+      -webkit-transform-origin: center;
+              transform-origin: center;
+      -webkit-animation-duration: 1s;
+              animation-duration: 1s;
+      -webkit-animation-fill-mode: both;
+              animation-fill-mode: both;
+      z-index: 1; }
     section.blog .post-thumb:after {
       content: '';
       display: block;
@@ -683,22 +699,78 @@ section.blog {
       -webkit-transition: all 200ms ease-in-out;
               transition: all 200ms ease-in-out;
       opacity: 0; }
-      section.blog .post-thumb .post-meta .name {
-        font-size: 16px;
+      section.blog .post-thumb .post-meta .name,
+      section.blog .post-thumb .post-meta .date,
+      section.blog .post-thumb .post-meta .excerpt {
+        font-size: .8em;
         line-height: 1.2; }
-      section.blog .post-thumb .post-meta .date {
-        font-size: 14px;
+      section.blog .post-thumb .post-meta .date,
+      section.blog .post-thumb .post-meta .excerpt {
         font-style: italic; }
   section.blog .post-thumb:hover .post-meta {
     opacity: 1;
     -webkit-transform: translate(0%, 0%) scale(1);
             transform: translate(0%, 0%) scale(1); }
-  @media (max-width: 720px) {
+  @media (max-width: 640px) {
     section.blog .desc-wrap {
-      margin-top: 100px; } }
+      margin-top: 100px;
+      margin-left: auto;
+      margin-right: auto; } }
   @media (max-width: 999px) and (min-width: 720px) {
     section.blog .post-thumb {
       width: 33.3%; } }
+
+@-webkit-keyframes jello {
+  from, 11.1%, to {
+    -webkit-transform: none;
+            transform: none; }
+  22.2% {
+    -webkit-transform: skewX(-12.5deg) skewY(-12.5deg);
+            transform: skewX(-12.5deg) skewY(-12.5deg); }
+  33.3% {
+    -webkit-transform: skewX(6.25deg) skewY(6.25deg);
+            transform: skewX(6.25deg) skewY(6.25deg); }
+  44.4% {
+    -webkit-transform: skewX(-3.125deg) skewY(-3.125deg);
+            transform: skewX(-3.125deg) skewY(-3.125deg); }
+  55.5% {
+    -webkit-transform: skewX(1.5625deg) skewY(1.5625deg);
+            transform: skewX(1.5625deg) skewY(1.5625deg); }
+  66.6% {
+    -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
+            transform: skewX(-0.78125deg) skewY(-0.78125deg); }
+  77.7% {
+    -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
+            transform: skewX(0.39062deg) skewY(0.39062deg); }
+  88.8% {
+    -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
+            transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
+
+@keyframes jello {
+  from, 11.1%, to {
+    -webkit-transform: none;
+            transform: none; }
+  22.2% {
+    -webkit-transform: skewX(-12.5deg) skewY(-12.5deg);
+            transform: skewX(-12.5deg) skewY(-12.5deg); }
+  33.3% {
+    -webkit-transform: skewX(6.25deg) skewY(6.25deg);
+            transform: skewX(6.25deg) skewY(6.25deg); }
+  44.4% {
+    -webkit-transform: skewX(-3.125deg) skewY(-3.125deg);
+            transform: skewX(-3.125deg) skewY(-3.125deg); }
+  55.5% {
+    -webkit-transform: skewX(1.5625deg) skewY(1.5625deg);
+            transform: skewX(1.5625deg) skewY(1.5625deg); }
+  66.6% {
+    -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
+            transform: skewX(-0.78125deg) skewY(-0.78125deg); }
+  77.7% {
+    -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
+            transform: skewX(0.39062deg) skewY(0.39062deg); }
+  88.8% {
+    -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
+            transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
 
 section.projects {
   background: #036564;
@@ -717,15 +789,30 @@ section.projects {
         -ms-flex-line-pack: center;
             align-content: center; }
     section.projects .projects-strip .col {
-      background: salmon;
       height: 100px;
       margin: 12px 12px;
       width: 100px;
-      border-radius: 50%;
       box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
       -webkit-transition: all 0.15s ease-in-out;
               transition: all 0.15s ease-in-out; }
+      section.projects .projects-strip .col:first-child {
+        background-image: url(/assets/img/img-quote.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain; }
+      section.projects .projects-strip .col:nth-child(2) {
+        background-image: url(/assets/img/img-fc04-tribute.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain; }
+      section.projects .projects-strip .col:nth-child(3) {
+        background-image: url(/assets/img/img-fccprofile.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain; }
       section.projects .projects-strip .col:hover {
+        -webkit-transform: scale(1.3);
+                transform: scale(1.3);
         box-shadow: 0 5px 14px rgba(0, 0, 0, 0.4);
         cursor: pointer; }
   section.projects .col-1 {
@@ -748,6 +835,12 @@ section.projects {
       margin-top: -20px;
       color: white; }
 
+@media (max-width: 640px) {
+  .home-lead,
+  .home-cta {
+    margin-left: auto;
+    margin-right: auto; } }
+
 @media (max-width: 895px) {
   section.projects .home-cta {
     max-width: 300px; }
@@ -759,17 +852,26 @@ section.projects {
 
 section.contact {
   background: #CDB380; }
+  section.contact h3 {
+    color: #FF0040; }
+    section.contact h3:hover {
+      color: #cc0033; }
   section.contact .col-2 {
     height: 200px;
     -webkit-align-self: center;
         -ms-flex-item-align: center;
             align-self: center;
+    text-align: center;
     margin-top: auto;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex; }
-  section.contact .contact-link {
+  section.contact .contact-link,
+  section.contact .tweet-button {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
     -webkit-align-self: center;
         -ms-flex-item-align: center;
             align-self: center;
@@ -872,6 +974,8 @@ section.contact {
   color: #033648; }
   .bloglayout h1 {
     color: #033648; }
+  .bloglayout .banner {
+    font-size: 1em; }
   .bloglayout .meta {
     font-size: .8em;
     line-height: 1;
@@ -884,10 +988,9 @@ section.contact {
   .bloglayout .sidebar {
     margin: 40px 20px 0 10px;
     padding-left: 20px;
-    height: 460px;
-    border: 3px solid rgba(100, 100, 100, 0.5);
+    border: 1px solid rgba(100, 100, 100, 0.5);
     border-radius: 5px;
-    width: 190px; }
+    height: 80vh; }
   .bloglayout .blog-title {
     font-size: 1.2em;
     margin-top: 25px;
@@ -898,3 +1001,22 @@ section.contact {
     padding: 0; }
     .bloglayout .postlist li {
       margin: 0 15px; }
+
+@media (max-width: 700px) {
+  .bloglayout {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse; }
+    .bloglayout .post-content {
+      width: 90%;
+      margin: auto; }
+    .bloglayout .sidebar {
+      height: auto;
+      margin-top: 10px; }
+    .bloglayout .postlist {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex; } }
