Change home indentation.

--- a/_pugfiles/sections-about.pug
+++ b/_pugfiles/sections-about.pug
@@ -2,5 +2,5 @@ section.about#about
   .flex.flex--center
     .col-1
       h2 Rich is learning Web and JavaScript development,
-      p.home-lead and he'd love to chat with you about it...
+      p and he'd love to chat with you about it...
     .col-1
