--- a/assets/css/4-layouts/_home.sass
+++ b/assets/css/4-layouts/_home.sass
@@ -38,8 +38,8 @@
 .col-50
   width: 50%
 
-.push-right
-  margin-left: 330px
+// .push-right
+//   margin-left: 330px
 
 @media (max-width: 640px)
   .home-sections .flex
@@ -51,18 +51,18 @@
   .col-50
     width: auto
 
-  .push-right
-    margin-left: 10px
+  // .push-right
+  //   margin-left: 10px
 
 
 // Typography
-.home-lead
-  font-size: 22px
-  line-height: 1.1
-  color: $text-color
-
-  &.outdented
-    text-indent: -0.8em
-
-    @media (max-width: 640px)
-      text-indent: 0
+// .home-lead
+//   font-size: 22px
+//   line-height: 1.1
+//   color: $text-color
+//
+//   &.outdented
+//     text-indent: -0.8em
+//
+//     @media (max-width: 640px)
+//       text-indent: 0
