--- a/assets/css/3-sections/_home-about.sass
+++ b/assets/css/3-sections/_home-about.sass
@@ -7,11 +7,10 @@ section.about
       size: 40px
       weight: 400
     line-height: 1
-    margin-left: -88px
     margin-top: 0
-
-  .home-lead
-    padding-bottom: 80px
+  // 
+  // .home-lead
+  //   padding-bottom: 80px
 
 
 @media (max-width: 640px)
