--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -1,7 +1,7 @@
 .home-container
   header
     width: 135px
-    background: honeydew
+    background: #fff
     padding: 30px 0
 
     .header-position
@@ -32,11 +32,9 @@
         margin: 20px 0
         padding: 0 20px 0 0
         text-align: right
-        background: lightgrey
 
         li
           margin-bottom: 10px
-          background: yellow
 
           &:last-child
             margin-bottom: 0
