--- a/_pugfiles/title.pug
+++ b/_pugfiles/title.pug
@@ -1,5 +1,5 @@
 .title-content.ba.bw2.b--black
   .tc.pv4.pv5-ns
-    h2.dib.pa2.ba.bw2.b--black corderophilosophy.com
+    h2.dib.pa2.ba.bw2.b--black.br3 corderophilosophy.com
     br/
-    h2.dib.pa2.ba.bw2.b--black.f5.near-black.ttu.tracked Web Development and Philosophy
+    h2.dib.pa2.ba.bw2.b--black.f5.near-black.ttu.tracked.br3 Web Development and Philosophy
