--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,11 +7,10 @@
 @import "1-base/base";
 @import "1-base/buttons";
 
-
 @import "3-sections/header";
 @import "3-sections/title";
-
+@import "3-sections/blog";
+@import "3-sections/projects";
 @import "3-sections/footer";
-
 
 @import "4-layouts/home";
