Style sections.projects.

--- a/_pugfiles/blog.pug
+++ b/_pugfiles/blog.pug
@@ -1,6 +1,6 @@
 .section-blog.cf
   .fl.w-100.w-25-ns.tc.pa3.pb4.left-col
-    .f2 Recent Blog Posts:
+    .f2.mt5-ns Recent Blog Posts:
 
   .fl.w-100.w-75-ns.tc.pa3.pb4.right-col.pl5
     | {% for post in site.posts limit: 8 %}
